--- a/src/themes/rice/app/home-page/home-news/home-news.component.html
+++ b/src/themes/rice/app/home-page/home-news/home-news.component.html
@@ -3,35 +3,37 @@
     <div class="jumbotron jumbotron-fluid">
       <div class="d-flex flex-wrap">
         <div>
-          <h5 class="display-5">Rice University Digital Scholarship Archive</h5>
+          <h2 class=" font-weight-bolder">Rice University Digital Scholarship Archive</h2>
 <!--          <p class="lead">Rice University Digital Scholarship Archive</p>-->
-          <p class="font-weight-light">This is Rice's institutional repository, a web site where the university's
+          <br/>
+          <p >This is Rice's institutional repository, a web site where the university's
             intellectual output is shared, managed, searched, and preserved. Most materials
             come from Rice faculty members' research, electronic theses and dissertations,
             and digitized collections of rare or unique books, images, musical performances,
-            and manuscripts. The archive runs on DSpace, an open source software package.
+            and manuscripts.
           </p>
-
+          <br />
+          <br />
           <ds-search-form [inPlaceSearch]="false" [searchPlaceholder]="'home.search-form.placeholder' | translate"></ds-search-form>
 
         </div>
       </div>
     </div>
   </div>
+<!--  <picture class="background-image">-->
+<!--    <source type="image/webp" srcset="assets/rice/images/3owls.jpg 2000w, assets/rice/images/3owls.jpg 1200w, assets/rice/images/3owls.jpg 768w">-->
+<!--    <source type="image/jpg" srcset="assets/rice/images/3owls.jpg 2000w, assets/rice/images/3owls.jpg 1200w, assets/rice/images/3owls.jpg 768w">-->
+<!--    <img alt="" [src]="'assets/rice/images/3owls.jpg'"/>&lt;!&ndash; without the []="''" Firefox downloads both the fallback and the resolved image &ndash;&gt;-->
+<!--  </picture>-->
   <picture class="background-image">
-    <source type="image/webp" srcset="assets/rice/images/3owls.jpeg 2000w, assets/rice/images/3owls.jpeg 1200w, assets/rice/images/3owls.jpeg 768w">
-    <source type="image/jpg" srcset="assets/rice/images/3owls.jpeg 2000w, assets/rice/images/3owls.jpeg 1200w, assets/rice/images/3owls.jpeg 768w">
-    <img alt="" [src]="'assets/rice/images/3owls.jpeg'"/><!-- without the []="''" Firefox downloads both the fallback and the resolved image -->
+    <source type="image/webp" srcset="assets/rice/images/ricelovett-00.jpg 2000w, assets/rice/images/ricelovett-00.jpg 1200w, assets/rice/images/ricelovett-00.jpg 768w">
+    <source type="image/jpg" srcset="assets/rice/images/ricelovett-00.jpg 2000w, assets/rice/images/ricelovett-00.jpg 1200w, assets/rice/images/ricelovett-00.jpg 768w">
+    <img alt="" [src]="'assets/rice/images/ricelovett-00.jpg'"/><!-- without the []="''" Firefox downloads both the fallback and the resolved image -->
   </picture>
 <!--  <picture class="background-image">-->
-<!--    <source type="image/webp" srcset="assets/rice/images/Rice-bg.jpeg 2000w, assets/rice/images/Rice-bg.jpeg 1200w, assets/rice/images/Rice-bg.jpeg 768w">-->
-<!--    <source type="image/jpg" srcset="assets/rice/images/Rice-bg.jpeg 2000w, assets/rice/images/Rice-bg.jpeg 1200w, assets/rice/images/Rice-bg.jpeg 768w">-->
-<!--    <img alt="" [src]="'assets/rice/images/Rice-bg.jpeg'"/>&lt;!&ndash; without the []="''" Firefox downloads both the fallback and the resolved image &ndash;&gt;-->
-<!--  </picture>-->
-<!--  <picture class="background-image">-->
-<!--    <source type="image/webp" srcset="assets/rice/images/220px-RiceInstitute1913.png 2000w, assets/rice/images/220px-RiceInstitute1913.png 1200w, assets/rice/images/220px-RiceInstitute1913.png 768w">-->
-<!--    <source type="image/jpg" srcset="assets/rice/images/220px-RiceInstitute1913.png 2000w, assets/rice/images/220px-RiceInstitute1913.png 1200w, assets/rice/images/220px-RiceInstitute1913.png 768w">-->
-<!--    <img alt="" [src]="'assets/rice/images/220px-RiceInstitute1913.png'"/>&lt;!&ndash; without the []="''" Firefox downloads both the fallback and the resolved image &ndash;&gt;-->
+<!--    <source type="image/webp" srcset="assets/rice/images/Office_Art_Selections_B 0004.JPG 2000w, assets/rice/images/Office_Art_Selections_B 0004.JPG 1200w, assets/rice/images/Office_Art_Selections_B 0004.JPG 768w">-->
+<!--    <source type="image/jpg" srcset="assets/rice/images/Office_Art_Selections_B 0004.JPG 2000w, assets/rice/images/Office_Art_Selections_B 0004.JPG 1200w, assets/rice/images/Office_Art_Selections_B 0004.JPG 768w">-->
+<!--    <img alt="" [src]="'assets/rice/images/Office_Art_Selections_B 0004.JPG'"/>&lt;!&ndash; without the []="''" Firefox downloads both the fallback and the resolved image &ndash;&gt;-->
 <!--  </picture>-->
 
 </div>
