--- a/src/themes/rice/app/navbar/navbar.component.scss
+++ b/src/themes/rice/app/navbar/navbar.component.scss
@@ -1,6 +1,7 @@
 nav.navbar {
-  border-top: 1px var(--ds-header-navbar-border-top-color) solid;
-  border-bottom: 5px var(--ds-header-navbar-border-bottom-color) solid;
+  //border-top: 1px var(--ds-header-navbar-border-top-color) solid;
+  //border-bottom: 5px var(--ds-header-navbar-border-bottom-color) solid;
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 5px;
   align-items: baseline;
   color: var(--ds-header-icon-color);
 }
@@ -38,9 +39,9 @@ nav.navbar {
         display: none;
       }
     }
-    padding: 0;
+    padding: 10px;
   }
-  height: 80px;
+  height: 120px;
 }
 
 a.navbar-brand img {
@@ -52,6 +53,6 @@ a.navbar-brand img {
     color: var(--ds-navbar-link-color);
   }
   ::ng-deep a.nav-link:hover {
-    color: var(--ds-navbar-link-color-hover);
+    color: var(--ds-navbar-link-hover-color);
   }
 }
