--- a/src/themes/rice/styles/_global-styles.scss
+++ b/src/themes/rice/styles/_global-styles.scss
@@ -3,6 +3,25 @@
 // imports the base global style
 @import '../../../styles/_global-styles.scss';
 
+a{
+  color: var(--ds-breadcrumb-link-color);
+}
+.btn-link{
+  color: var(--ds-breadcrumb-link-color);
+}
+a:hover {
+  color: var(--ds-breadcrumb-link-hover-color);
+}
+
+a.lead {
+  color: var(--ds-breadcrumb-link-color);
+}
+a.lead:hover {
+  color: var(--ds-breadcrumb-link-hover-color);
+}
+.lead{
+  font-weight: 400;
+}
 .facet-filter, .setting-option {
   background-color: var(--bs-light);
   border-radius: var(--bs-border-radius);
