--- a/src/themes/rice/app/navbar/navbar.component.html
+++ b/src/themes/rice/app/navbar/navbar.component.html
@@ -2,6 +2,7 @@
   class="navbar navbar-expand-md navbar-light p-0 navbar-container" role="navigation" [attr.aria-label]="'nav.main.description' | translate">
   <div class="navbar-inner-container w-100 h-100" [class.container]="!(isXsOrSm$ | async)">
     <a class="navbar-brand my-3" routerLink="/home">
+<!--      <img src="assets/rice/images/DSLogo.png" [attr.alt]="'menu.header.image.logo' | translate" />-->
       <img src="assets/rice/images/RDSA-logo.png" [attr.alt]="'menu.header.image.logo' | translate" />
 <!--      <img src="assets/rice/images/220px-RiceInstitute1913.png" [attr.alt]="'menu.header.image.logo' | translate" />-->
 <!--      <img src="assets/rice/images/Rice-bg.png" [attr.alt]="'menu.header.image.logo' | translate" />-->
