--- a/src/themes/rice/styles/_theme_sass_variable_overrides.scss
+++ b/src/themes/rice/styles/_theme_sass_variable_overrides.scss
@@ -6,14 +6,15 @@
 //@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;1,200;1,300;1,400;1,600;1,700;1,800&display=swap');
 // Import the font (from a URL)
 //@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+//@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 // Configure Bootstrap to use this font (and list a number of backup fonts to use on various systems)
 //$font-family-sans-serif: 'Source Sans Pro', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 $font-family-sans-serif: 'Lato', sans-serif;
 //$font-family-sans-serif: 'Nunito', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
 $navbar-dark-color: #FFFFFF;
-
+$rice-navy: #1d3a6b;
 /* Reassign color vars to semantic color scheme */
 $blue: #2b4e72 !default;
 $green: #92C642 !default;
