--- a/src/themes/rice/app/home-page/home-page.component.html
+++ b/src/themes/rice/app/home-page/home-page.component.html
@@ -4,6 +4,30 @@
     <ds-view-tracker [object]="site"></ds-view-tracker>
   </ng-container>
 <!--  <ds-search-form [inPlaceSearch]="false" [searchPlaceholder]="'home.search-form.placeholder' | translate"></ds-search-form>-->
-  <ds-top-level-community-list></ds-top-level-community-list>
+<!--  <ds-top-level-community-list></ds-top-level-community-list>-->
+
+  <div class="thumb-font-3">
+    <h2>Top Communities</h2>
+    <ul class="list-unstyled lead">
+      <li class="mt-4 mb-4 d-flex">
+        <a href="https://dspacedev.rice.edu/communities/1c8b2abe-2757-489e-9647-efeb4522f74e">Rice University Graduate Electronic Theses and Dissertations</a>
+      </li>
+      <li class="mt-4 mb-4 d-flex">
+        <a href="https://dspacedev.rice.edu/communities/6a8875a3-758a-4549-bfe2-cddc8d1f0cc9">Faculty & Staff Research</a>
+      </li>
+      <li class="mt-4 mb-4 d-flex">
+        <a href="https://dspacedev.rice.edu/communities/fdf2a10f-f65d-4c8f-8fab-d9a9a0e6374b">Graduate and Undergraduate Student Research</a>
+      </li>
+      <li class="mt-4 mb-4 d-flex">
+        <a href="https://dspacedev.rice.edu/communities/81d0f113-f1a1-496c-bee1-5c9a1be894fb">Cultural Heritage Collections</a>
+      </li>
+      <li class="mt-4 mb-4 d-flex">
+        <a href="https://dspacedev.rice.edu/communities/3b1929a9-47a7-402d-8b71-4b6e0ee6127e">Publications and Performances</a>
+      </li>
+      <li class="mt-4 mb-4 d-flex">
+        <a href="https://dspacedev.rice.edu/communities/4b3f9e75-5427-4ab4-9ba4-62c3b4d4da31">University Archives and Rice History</a>
+      </li>
+    </ul>
+  </div>
   <ds-recent-item-list *ngIf="recentSubmissionspageSize>0"></ds-recent-item-list>
 </div>
