--- a/src/themes/rice/app/navbar/navbar.component.html
+++ b/src/themes/rice/app/navbar/navbar.component.html
@@ -19,7 +19,7 @@
         </ng-container>
       </ul>
     </div>
-<!--    <ds-search-navbar class="navbar-collapsed"></ds-search-navbar>-->
+    <ds-search-navbar class="navbar-collapsed"></ds-search-navbar>
     <ds-lang-switch class="navbar-collapsed"></ds-lang-switch>
     <ds-context-help-toggle class="navbar-collapsed"></ds-context-help-toggle>
     <ds-themed-auth-nav-menu class="navbar-collapsed"></ds-themed-auth-nav-menu>
