--- a/src/app/shared/lang-switch/lang-switch.component.html
+++ b/src/app/shared/lang-switch/lang-switch.component.html
@@ -4,7 +4,8 @@
      [title]="'nav.language' | translate" class="px-1"
      (click)="$event.preventDefault()" data-toggle="dropdown" ngbDropdownToggle
      tabindex="0">
-    <i class="fas fa-globe-asia fa-lg fa-fw"></i>
+<!--    YJ Non-customizable-->
+    <i class="fas fa-globe-asia fa-lg fa-fw"></i><span style="font-size: xx-small"> {{currentLangLabel()}} </span>
   </a>
   <ul ngbDropdownMenu class="dropdown-menu" [attr.aria-label]="'nav.language' |translate">
     <li class="dropdown-item" tabindex="0" #langSelect *ngFor="let lang of translate.getLangs()"
