--- a/src/themes/rice/app/header/header.component.html
+++ b/src/themes/rice/app/header/header.component.html
@@ -3,7 +3,8 @@
     <div class="d-flex flex-grow-1">
       <a class="navbar-brand m-2" routerLink="/home">
 <!--        <img src="assets/images/dspace-logo.svg" [attr.alt]="'menu.header.image.logo' | translate"/>-->
-        <img src="assets/rice/images/RDSA-logo.png" [attr.alt]="'menu.header.image.logo' | translate"/>
+<!--        This is not for computer browser, might for mobile? -->
+        <img src="assets/rice/images/Rice_Research_Repository_logo_color.png" [attr.alt]="'menu.header.image.logo' | translate"/>
       </a>
     </div>
     <div class="d-flex flex-grow-1 ml-auto justify-content-end align-items-center">
