--- a/src/themes/rice/app/footer/footer.component.html
+++ b/src/themes/rice/app/footer/footer.component.html
@@ -11,7 +11,7 @@
 
           <ul class="list-unstyled mb-0">
             <li>
-              <a href="https://library.rice.edu/dss" class="">Digital Scholarship Services</a>
+              <a href="https://library.rice.edu/dss" class="">Rice Research Repository</a>
             </li>
             <li>
               <a href="https://library.rice.edu" class="">Fondren Library</a>
@@ -33,13 +33,13 @@
               <a href="https://library.rice.edu/contact?subject=RDSA" class="">Contact Us</a>
             </li>
             <li>
-              <a href="https://scholarship.rice.edu/page/faq" class="">FAQ</a>
+              <a href="https://libanswers.rice.edu/repository/" class="">FAQ</a>
             </li>
             <li>
               <a href="https://privacy.rice.edu/" class="">Privacy Notice</a>
             </li>
             <li>
-              <a href="https://scholarship.rice.edu/page/accessibility" class="">Accessibility Statement</a>
+              <a href="https://libguides.rice.edu/c.php?g=1333413&p=9820309" class="">Accessibility Statement</a>
             </li>
           </ul>
         </div>
