--- a/src/themes/rice/app/home-page/home-news/home-news.component.html
+++ b/src/themes/rice/app/home-page/home-news/home-news.component.html
@@ -3,7 +3,7 @@
     <div class="jumbotron jumbotron-fluid">
       <div class="d-flex flex-wrap">
         <div>
-          <h2 class=" font-weight-bolder">Rice University Digital Scholarship Archive</h2>
+          <h2 class=" font-weight-bolder">Rice University Research Repository</h2>
 <!--          <p class="lead">Rice University Digital Scholarship Archive</p>-->
           <br/>
           <p >This is Rice's institutional repository, a web site where the university's
