--- a/src/themes/rice/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
+++ b/src/themes/rice/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
@@ -33,6 +33,18 @@
                                             [label]="'relationships.isAuthorOf' | translate">
     </ds-themed-metadata-representation-list>
     <ds-generic-item-page-field [item]="object"
+                                [fields]="['dc.contributor.advisor']"
+                                [label]="'item.page.advisor'">
+    </ds-generic-item-page-field>
+    <ds-generic-item-page-field [item]="object"
+                                [fields]="['thesis.degree.name']"
+                                [label]="'item.page.degreename'">
+    </ds-generic-item-page-field>
+    <ds-generic-item-page-field [item]="object"
+                                [fields]="['dc.type']"
+                                [label]="'item.page.type'">
+    </ds-generic-item-page-field>
+    <ds-generic-item-page-field [item]="object"
                                 [fields]="['journal.title']"
                                 [label]="'item.page.journal-title'">
     </ds-generic-item-page-field>
@@ -62,9 +74,27 @@
                                 [label]="'item.page.subject'">
     </ds-generic-item-page-field>
     <ds-generic-item-page-field [item]="object"
-                                [fields]="['dc.identifier.citation']"
-                                [label]="'item.page.citation'">
+                                [fields]="['dc.relation.IsPartOf']"
+                                [label]="'item.page.ispartof'"
+                                [enableMarkdown]="true">
     </ds-generic-item-page-field>
+    <ds-generic-item-page-field [item]="object"
+                                [fields]="['dc.identifier.citation']"
+                                [label]="'item.page.citation'"
+                                [enableMarkdown]="true">
+    </ds-generic-item-page-field>
+    <ds-item-page-uri-field [item]="object"
+                            [fields]="['dc.identifier.doi']"
+                            [label]="'item.page.publishedversion'">
+    </ds-item-page-uri-field>
+    <ds-generic-item-page-field [item]="object"
+                                [fields]="['dc.rights']"
+                                [label]="'item.page.rights'">
+    </ds-generic-item-page-field>
+    <ds-item-page-uri-field [item]="object"
+                            [fields]="['dc.rights.uri']"
+                            [label]="'item.page.rightsuri'">
+    </ds-item-page-uri-field>
     <ds-item-page-uri-field [item]="object"
                             [fields]="['dc.identifier.uri']"
                             [label]="'item.page.uri'">
