Add markdown for citation and ispartof fields

--- a/src/themes/rice/app/home-page/home-news/home-news.component.html
+++ b/src/themes/rice/app/home-page/home-news/home-news.component.html
@@ -6,11 +6,19 @@
           <h2 class=" font-weight-bolder">Rice University Research Repository</h2>
 <!--          <p class="lead">Rice University Digital Scholarship Archive</p>-->
           <br/>
-          <p >This is Rice's institutional repository, a web site where the university's
-            intellectual output is shared, managed, searched, and preserved. Most materials
-            come from Rice faculty members' research, electronic theses and dissertations,
-            and digitized collections of rare or unique books, images, musical performances,
-            and manuscripts.
+          <p >
+            The Rice Research Repository (R-3) provides access to research
+            produced at Rice University, including theses and dissertations,
+            journal articles, research center publications, datasets, and
+            academic journals. Managed by Fondren Library, R-3 is indexed by
+            Google and Google Scholar, follows best practices for preservation,
+            and provides DOIs to facilitate citation.
+
+<!--            This is Rice's institutional repository, a web site where the university's-->
+<!--            intellectual output is shared, managed, searched, and preserved. Most materials-->
+<!--            come from Rice faculty members' research, electronic theses and dissertations,-->
+<!--            and digitized collections of rare or unique books, images, musical performances,-->
+<!--            and manuscripts.-->
           </p>
           <br />
           <br />
