--- a/src/themes/rice/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
+++ b/src/themes/rice/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
@@ -73,16 +73,8 @@
                                 [separator]="', '"
                                 [label]="'item.page.subject'">
     </ds-generic-item-page-field>
-    <ds-generic-item-page-field [item]="object"
-                                [fields]="['dc.relation.IsPartOf']"
-                                [label]="'item.page.ispartof'"
-                                [enableMarkdown]="true">
-    </ds-generic-item-page-field>
-    <ds-generic-item-page-field [item]="object"
-                                [fields]="['dc.identifier.citation']"
-                                [label]="'item.page.citation'"
-                                [enableMarkdown]="true">
-    </ds-generic-item-page-field>
+    <ds-item-page-ispartof-field [item]="object"></ds-item-page-ispartof-field>
+    <ds-item-page-citation-field [item]="object"></ds-item-page-citation-field>
     <ds-item-page-uri-field [item]="object"
                             [fields]="['dc.identifier.doi']"
                             [label]="'item.page.publishedversion'">
