--- a/src/themes/rice/app/navbar/navbar.component.html
+++ b/src/themes/rice/app/navbar/navbar.component.html
@@ -19,6 +19,7 @@
         </ng-container>
       </ul>
     </div>
+<!--    <ds-about class="navbar-collapsed"></ds-about>-->
     <ds-search-navbar class="navbar-collapsed"></ds-search-navbar>
     <ds-lang-switch class="navbar-collapsed"></ds-lang-switch>
     <ds-context-help-toggle class="navbar-collapsed"></ds-context-help-toggle>
