simple item page update

--- a/src/themes/rice/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
+++ b/src/themes/rice/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
@@ -80,29 +80,29 @@
                                 [label]="'item.page.description'">
     </ds-generic-item-page-field>
 
-    <ds-generic-item-page-field [item]="object"
-                                [fields]="['dc.subject']"
-                                [separator]="', '"
-                                [label]="'item.page.subject'">
-    </ds-generic-item-page-field>
-    <ds-item-page-ispartof-field [item]="object"></ds-item-page-ispartof-field>
-    <ds-item-page-citation-field [item]="object"></ds-item-page-citation-field>
-    <ds-item-page-uri-field [item]="object"
-                            [fields]="['dc.identifier.doi']"
-                            [label]="'item.page.publishedversion'">
-    </ds-item-page-uri-field>
-    <ds-generic-item-page-field [item]="object"
-                                [fields]="['dc.rights']"
-                                [label]="'item.page.rights'">
-    </ds-generic-item-page-field>
-    <ds-item-page-uri-field [item]="object"
-                            [fields]="['dc.rights.uri']"
-                            [label]="'item.page.rightsuri'">
-    </ds-item-page-uri-field>
-    <ds-item-page-uri-field [item]="object"
-                            [fields]="['dc.identifier.uri']"
-                            [label]="'item.page.uri'">
-    </ds-item-page-uri-field>
+<!--    <ds-generic-item-page-field [item]="object"-->
+<!--                                [fields]="['dc.subject']"-->
+<!--                                [separator]="', '"-->
+<!--                                [label]="'item.page.subject'">-->
+<!--    </ds-generic-item-page-field>-->
+<!--    <ds-item-page-ispartof-field [item]="object"></ds-item-page-ispartof-field>-->
+<!--    <ds-item-page-citation-field [item]="object"></ds-item-page-citation-field>-->
+<!--    <ds-item-page-uri-field [item]="object"-->
+<!--                            [fields]="['dc.identifier.doi']"-->
+<!--                            [label]="'item.page.publishedversion'">-->
+<!--    </ds-item-page-uri-field>-->
+<!--    <ds-generic-item-page-field [item]="object"-->
+<!--                                [fields]="['dc.rights']"-->
+<!--                                [label]="'item.page.rights'">-->
+<!--    </ds-generic-item-page-field>-->
+<!--    <ds-item-page-uri-field [item]="object"-->
+<!--                            [fields]="['dc.rights.uri']"-->
+<!--                            [label]="'item.page.rightsuri'">-->
+<!--    </ds-item-page-uri-field>-->
+<!--    <ds-item-page-uri-field [item]="object"-->
+<!--                            [fields]="['dc.identifier.uri']"-->
+<!--                            [label]="'item.page.uri'">-->
+<!--    </ds-item-page-uri-field>-->
     <ds-item-page-collections [item]="object"></ds-item-page-collections>
     <div>
       <a class="btn btn-outline-primary" [routerLink]="[itemPageRoute + '/full']" role="button">
