--- a/src/themes/rice/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
+++ b/src/themes/rice/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
@@ -74,19 +74,19 @@
     </ds-generic-item-page-field>
   </div>
   <div class="col-xs-12 col-md-6">
-<!--    <ds-item-page-abstract-field [item]="object"></ds-item-page-abstract-field>-->
-<!--    <ds-generic-item-page-field [item]="object"-->
-<!--                                [fields]="['dc.description']"-->
-<!--                                [label]="'item.page.description'">-->
-<!--    </ds-generic-item-page-field>-->
+    <ds-item-page-abstract-field [item]="object"></ds-item-page-abstract-field>
+    <ds-generic-item-page-field [item]="object"
+                                [fields]="['dc.description']"
+                                [label]="'item.page.description'">
+    </ds-generic-item-page-field>
 
-<!--    <ds-generic-item-page-field [item]="object"-->
-<!--                                [fields]="['dc.subject']"-->
-<!--                                [separator]="', '"-->
-<!--                                [label]="'item.page.subject'">-->
-<!--    </ds-generic-item-page-field>-->
-<!--    <ds-item-page-ispartof-field [item]="object"></ds-item-page-ispartof-field>-->
-<!--    <ds-item-page-citation-field [item]="object"></ds-item-page-citation-field>-->
+    <ds-generic-item-page-field [item]="object"
+                                [fields]="['dc.subject']"
+                                [separator]="', '"
+                                [label]="'item.page.subject'">
+    </ds-generic-item-page-field>
+    <ds-item-page-ispartof-field [item]="object"></ds-item-page-ispartof-field>
+    <ds-item-page-citation-field [item]="object"></ds-item-page-citation-field>
     <ds-item-page-uri-field [item]="object"
                             [fields]="['dc.identifier.doi']"
                             [label]="'item.page.publishedversion'">
