--- a/src/themes/rice/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
+++ b/src/themes/rice/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
@@ -32,30 +32,18 @@
                                             [metadataFields]="['dc.contributor.author', 'dc.creator']"
                                             [label]="'relationships.isAuthorOf' | translate">
     </ds-themed-metadata-representation-list>
-    <ds-themed-metadata-representation-list class="ds-item-page-mixed-author-field"
-                                            [parentItem]="object"
-                                            [itemType]="'Person'"
-                                            [metadataFields]="['dc.contributor.composer']"
-                                            [label]="'relationships.isAuthorOf' | translate">
-    </ds-themed-metadata-representation-list>
-    <ds-themed-metadata-representation-list class="ds-item-page-mixed-author-field"
-                                            [parentItem]="object"
-                                            [itemType]="'Person'"
-                                            [metadataFields]="['dc.contributor.performer']"
-                                            [label]="'relationships.isAuthorOf' | translate">
-    </ds-themed-metadata-representation-list>
-    <ds-generic-item-page-field [item]="object"
-                                [fields]="['dc.contributor.advisor']"
-                                [label]="'item.page.advisor'">
-    </ds-generic-item-page-field>
-    <ds-generic-item-page-field [item]="object"
-                                [fields]="['thesis.degree.name']"
-                                [label]="'item.page.degreename'">
-    </ds-generic-item-page-field>
-    <ds-generic-item-page-field [item]="object"
-                                [fields]="['dc.type']"
-                                [label]="'item.page.type'">
-    </ds-generic-item-page-field>
+<!--    <ds-themed-metadata-representation-list class="ds-item-page-mixed-author-field"-->
+<!--                                            [parentItem]="object"-->
+<!--                                            [itemType]="'Person'"-->
+<!--                                            [metadataFields]="['dc.contributor.composer']"-->
+<!--                                            [label]="'relationships.isAuthorOf' | translate">-->
+<!--    </ds-themed-metadata-representation-list>-->
+<!--    <ds-themed-metadata-representation-list class="ds-item-page-mixed-author-field"-->
+<!--                                            [parentItem]="object"-->
+<!--                                            [itemType]="'Person'"-->
+<!--                                            [metadataFields]="['dc.contributor.performer']"-->
+<!--                                            [label]="'relationships.isAuthorOf' | translate">-->
+<!--    </ds-themed-metadata-representation-list>-->
     <ds-generic-item-page-field [item]="object"
                                 [fields]="['journal.title']"
                                 [label]="'item.page.journal-title'">
@@ -85,8 +73,20 @@
                                 [separator]="', '"
                                 [label]="'item.page.subject'">
     </ds-generic-item-page-field>
-    <ds-item-page-ispartof-field [item]="object"></ds-item-page-ispartof-field>
-    <ds-item-page-citation-field [item]="object"></ds-item-page-citation-field>
+    <ds-generic-item-page-field [item]="object"
+                                [fields]="['dc.contributor.advisor']"
+                                [label]="'item.page.advisor'">
+    </ds-generic-item-page-field>
+    <ds-generic-item-page-field [item]="object"
+                                [fields]="['thesis.degree.name']"
+                                [label]="'item.page.degreename'">
+    </ds-generic-item-page-field>
+    <ds-generic-item-page-field [item]="object"
+                                [fields]="['dc.type']"
+                                [label]="'item.page.type'">
+    </ds-generic-item-page-field>
+<!--    <ds-item-page-ispartof-field [item]="object"></ds-item-page-ispartof-field>-->
+<!--    <ds-item-page-citation-field [item]="object"></ds-item-page-citation-field>-->
     <ds-item-page-uri-field [item]="object"
                             [fields]="['dc.identifier.doi']"
                             [label]="'item.page.publishedversion'">
