--- a/src/themes/rice/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
+++ b/src/themes/rice/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
@@ -88,6 +88,10 @@
 <!--    <ds-item-page-ispartof-field [item]="object"></ds-item-page-ispartof-field>-->
 <!--    <ds-item-page-citation-field [item]="object"></ds-item-page-citation-field>-->
     <ds-item-page-uri-field [item]="object"
+                            [fields]="['dc.identifier.citation']"
+                            [label]="'item.page.citation'">
+    </ds-item-page-uri-field>
+    <ds-item-page-uri-field [item]="object"
                             [fields]="['dc.identifier.doi']"
                             [label]="'item.page.publishedversion'">
     </ds-item-page-uri-field>
