--- a/src/themes/rice/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
+++ b/src/themes/rice/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
@@ -67,12 +67,6 @@
                                 [fields]="['dc.description']"
                                 [label]="'item.page.description'">
     </ds-generic-item-page-field>
-
-    <ds-generic-item-page-field [item]="object"
-                                [fields]="['dc.subject']"
-                                [separator]="', '"
-                                [label]="'item.page.subject'">
-    </ds-generic-item-page-field>
     <ds-generic-item-page-field [item]="object"
                                 [fields]="['dc.contributor.advisor']"
                                 [label]="'item.page.advisor'">
@@ -85,12 +79,10 @@
                                 [fields]="['dc.type']"
                                 [label]="'item.page.type'">
     </ds-generic-item-page-field>
-<!--    <ds-item-page-ispartof-field [item]="object"></ds-item-page-ispartof-field>-->
-<!--    <ds-item-page-citation-field [item]="object"></ds-item-page-citation-field>-->
-    <ds-item-page-uri-field [item]="object"
-                            [fields]="['dc.identifier.citation']"
-                            [label]="'item.page.citation'">
-    </ds-item-page-uri-field>
+    <ds-generic-item-page-field [item]="object"
+                                [fields]="['dc.identifier.citation']"
+                                [label]="'item.page.citation'">
+    </ds-generic-item-page-field>
     <ds-item-page-uri-field [item]="object"
                             [fields]="['dc.identifier.doi']"
                             [label]="'item.page.publishedversion'">
@@ -103,10 +95,19 @@
                             [fields]="['dc.rights.uri']"
                             [label]="'item.page.rightsuri'">
     </ds-item-page-uri-field>
-    <ds-item-page-uri-field [item]="object"
-                            [fields]="['dc.identifier.uri']"
-                            [label]="'item.page.uri'">
-    </ds-item-page-uri-field>
+    <ds-generic-item-page-field [item]="object"
+                                [fields]="['dc.subject']"
+                                [separator]="', '"
+                                [label]="'item.page.subject'">
+    </ds-generic-item-page-field>
+
+<!--    <ds-item-page-ispartof-field [item]="object"></ds-item-page-ispartof-field>-->
+<!--    <ds-item-page-citation-field [item]="object"></ds-item-page-citation-field>-->
+
+<!--    <ds-item-page-uri-field [item]="object"-->
+<!--                            [fields]="['dc.identifier.uri']"-->
+<!--                            [label]="'item.page.uri'">-->
+<!--    </ds-item-page-uri-field>-->
     <ds-item-page-collections [item]="object"></ds-item-page-collections>
     <div>
       <a class="btn btn-outline-primary" [routerLink]="[itemPageRoute + '/full']" role="button">
