--- a/src/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
+++ b/src/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
@@ -75,10 +75,10 @@
       [separator]="', '"
       [label]="'item.page.subject'">
     </ds-generic-item-page-field>
-<!--    <ds-generic-item-page-field [item]="object"-->
-<!--      [fields]="['dc.identifier.citation']"-->
-<!--      [label]="'item.page.citation'">-->
-<!--    </ds-generic-item-page-field>-->
+    <ds-generic-item-page-field [item]="object"
+      [fields]="['dc.identifier.citation']"
+      [label]="'item.page.citation'">
+    </ds-generic-item-page-field>
 <!--    <ds-generic-item-page-field [item]="object"-->
 <!--                                [fields]="['dc.relation.IsPartOf']"-->
 <!--                                [label]="'item.page.ispartof'">-->
