--- a/src/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
+++ b/src/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
@@ -62,14 +62,14 @@
       [fields]="['dc.description']"
       [label]="'item.page.description'">
     </ds-generic-item-page-field>
-<!--    <ds-generic-item-page-field [item]="object"-->
-<!--                                [fields]="['thesis.degree.name']"-->
-<!--                                [label]="'item.page.degreename'">-->
-<!--    </ds-generic-item-page-field>-->
-<!--    <ds-generic-item-page-field [item]="object"-->
-<!--                                [fields]="['dc.type']"-->
-<!--                                [label]="'item.page.type'">-->
-<!--    </ds-generic-item-page-field>-->
+    <ds-generic-item-page-field [item]="object"
+                                [fields]="['thesis.degree.name']"
+                                [label]="'item.page.degreename'">
+    </ds-generic-item-page-field>
+    <ds-generic-item-page-field [item]="object"
+                                [fields]="['dc.type']"
+                                [label]="'item.page.type'">
+    </ds-generic-item-page-field>
     <ds-generic-item-page-field [item]="object"
       [fields]="['dc.subject']"
       [separator]="', '"
@@ -79,22 +79,22 @@
       [fields]="['dc.identifier.citation']"
       [label]="'item.page.citation'">
     </ds-generic-item-page-field>
-<!--    <ds-generic-item-page-field [item]="object"-->
-<!--                                [fields]="['dc.relation.IsPartOf']"-->
-<!--                                [label]="'item.page.ispartof'">-->
-<!--    </ds-generic-item-page-field>-->
-<!--    <ds-item-page-uri-field [item]="object"-->
-<!--                            [fields]="['dc.identifier.doi']"-->
-<!--                            [label]="'item.page.publishedversion'">-->
-<!--    </ds-item-page-uri-field>-->
-<!--    <ds-generic-item-page-field [item]="object"-->
-<!--                                [fields]="['dc.rights']"-->
-<!--                                [label]="'item.page.rights'">-->
-<!--    </ds-generic-item-page-field>-->
-<!--    <ds-item-page-uri-field [item]="object"-->
-<!--                            [fields]="['dc.rights.uri']"-->
-<!--                            [label]="'item.page.rightsuri'">-->
-<!--    </ds-item-page-uri-field>-->
+    <ds-generic-item-page-field [item]="object"
+                                [fields]="['dc.relation.IsPartOf']"
+                                [label]="'item.page.ispartof'">
+    </ds-generic-item-page-field>
+    <ds-item-page-uri-field [item]="object"
+                            [fields]="['dc.identifier.doi']"
+                            [label]="'item.page.publishedversion'">
+    </ds-item-page-uri-field>
+    <ds-generic-item-page-field [item]="object"
+                                [fields]="['dc.rights']"
+                                [label]="'item.page.rights'">
+    </ds-generic-item-page-field>
+    <ds-item-page-uri-field [item]="object"
+                            [fields]="['dc.rights.uri']"
+                            [label]="'item.page.rightsuri'">
+    </ds-item-page-uri-field>
     <ds-item-page-uri-field [item]="object"
       [fields]="['dc.identifier.uri']"
       [label]="'item.page.uri'">
