--- a/src/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
+++ b/src/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
@@ -80,10 +80,11 @@
 <!--      [label]="'item.page.citation'">-->
 <!--    </ds-generic-item-page-field>-->
     <ds-item-page-citation-field [item]="object"></ds-item-page-citation-field>
-    <ds-generic-item-page-field [item]="object"
-                                [fields]="['dc.relation.IsPartOf']"
-                                [label]="'item.page.ispartof'">
-    </ds-generic-item-page-field>
+<!--    <ds-generic-item-page-field [item]="object"-->
+<!--                                [fields]="['dc.relation.IsPartOf']"-->
+<!--                                [label]="'item.page.ispartof'">-->
+<!--    </ds-generic-item-page-field>-->
+    <ds-item-page-ispartof-field [item]="object"></ds-item-page-ispartof-field>
     <ds-item-page-uri-field [item]="object"
                             [fields]="['dc.identifier.doi']"
                             [label]="'item.page.publishedversion'">
