--- a/src/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
+++ b/src/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
@@ -32,12 +32,6 @@
       [metadataFields]="['dc.contributor.author', 'dc.creator']"
       [label]="'relationships.isAuthorOf' | translate">
     </ds-themed-metadata-representation-list>
-<!--    <ds-themed-metadata-representation-list class="ds-item-page-mixed-author-field"-->
-<!--                                            [parentItem]="object"-->
-<!--                                            [itemType]="'Person'"-->
-<!--                                            [metadataFields]="['dc.contributor.advisor']"-->
-<!--                                            [label]="'item.page.advisor' | translate">-->
-<!--    </ds-themed-metadata-representation-list>-->
 
     <ds-generic-item-page-field [item]="object"
       [fields]="['journal.title']"
@@ -62,6 +56,12 @@
       [fields]="['dc.description']"
       [label]="'item.page.description'">
     </ds-generic-item-page-field>
+    <ds-themed-metadata-representation-list class="ds-item-page-mixed-author-field"
+                                            [parentItem]="object"
+                                            [itemType]="'Person'"
+                                            [metadataFields]="['dc.contributor.advisor']"
+                                            [label]="'item.page.advisor' | translate">
+    </ds-themed-metadata-representation-list>
     <ds-generic-item-page-field [item]="object"
                                 [fields]="['thesis.degree.name']"
                                 [label]="'item.page.degreename'">
