update with about link

--- a/src/themes/rice/app/footer/footer.component.html
+++ b/src/themes/rice/app/footer/footer.component.html
@@ -7,11 +7,11 @@
 
         <!--Grid column-->
         <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
-          <h6 class="text-uppercase">Managed By</h6>
+<!--          <h6 class="text-uppercase">Managed By</h6>-->
 
           <ul class="list-unstyled mb-0">
             <li>
-              <a href="https://library.rice.edu/dss" class="">Rice Research Repository</a>
+              <a href="https://libguides.rice.edu/c.php?g=1333413&p=9819892" class="">About R-3</a>
             </li>
             <li>
               <a href="https://library.rice.edu" class="">Fondren Library</a>
