remove download from video/audio player

--- a/src/app/item-page/media-viewer/media-viewer-video/media-viewer-video.component.html
+++ b/src/app/item-page/media-viewer/media-viewer-video/media-viewer-video.component.html
@@ -8,6 +8,7 @@
   "
   preload="none"
   controls
+  controlsList="nodownload"
 >
   <ng-container *ngIf="getMediaCap(medias[currentIndex].bitstream.name, captions) as capInfos">
     <ng-container *ngFor="let capInfo of capInfos">
