remove link for historical community from home page, add wrc links to quartex

--- a/src/themes/rice/app/home-page/home-news/home-news.component.html
+++ b/src/themes/rice/app/home-page/home-news/home-news.component.html
@@ -12,7 +12,10 @@
             journal articles, research center publications, datasets, and
             academic journals. Managed by Fondren Library, R-3 is indexed by
             Google and Google Scholar, follows best practices for preservation,
-            and provides DOIs to facilitate citation.
+            and provides DOIs to facilitate citation. Woodson Research Center collections,
+            including Rice Images and Documents and the Task Force on Slavery, Segregation,
+            and Racial Injustice, can be found at
+            <a herf="https://digitalcollections.rice.edu/">here</a>.
 
 <!--            This is Rice's institutional repository, a web site where the university's-->
 <!--            intellectual output is shared, managed, searched, and preserved. Most materials-->
